ci: update to macos-15 runner for Swift 6.2 compatibility

--- a/.github/workflows/test-tcp-fix.yml
+++ b/.github/workflows/test-tcp-fix.yml
@@ -5,10 +5,6 @@ on:
     paths:
       - 'Sources/SocketForwarder/**'
       - 'Tests/SocketForwarderTests/**'
-  push:
-    branches:
-      - testing
-      - fix-tcp-port-forwarding
   workflow_dispatch:
 
 permissions:
@@ -17,16 +13,19 @@ permissions:
 jobs:
   unit-tests:
     name: Run SocketForwarder Unit Tests
-    runs-on: macos-14
+    runs-on: macos-15  # macOS 15 has newer Swift
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Setup Xcode
+      - name: Setup Xcode and verify Swift version
         run: |
           sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
           xcodebuild -version
+          swift --version
+          echo "Swift version:"
+          swift --version | head -1
       
       - name: Run SocketForwarder Tests
         run: |
@@ -52,17 +51,18 @@ jobs:
   
   integration-test:
     name: Integration Test - Server-First Protocols
-    runs-on: macos-14
+    runs-on: macos-15  # macOS 15 has newer Swift
     needs: unit-tests
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Setup Xcode
+      - name: Setup Xcode and verify environment
         run: |
           sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
           xcodebuild -version
+          swift --version
       
       - name: Build container tool
         run: |
