ci: Enable workflow in fork for testing
Temporarily disable repository check and use GitHub-hosted runners
to allow CI testing in fork. This change will NOT be included in the
upstream PR to apple/container.

--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -14,9 +14,10 @@ on:
 jobs:
   buildAndTest:
     name: Build and test the project
-    if: github.repository == 'apple/container'
+    # Temporarily allow fork CI for testing (remove before upstream PR)
+    # if: github.repository == 'apple/container'
     timeout-minutes: 60
-    runs-on: [self-hosted, macos, tahoe, ARM64]
+    runs-on: macos-latest  # Use GitHub-hosted runner instead of Apple's self-hosted
     permissions:
       contents: read
       packages: read
