--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -46,8 +46,7 @@ jobs:
             git diff --name-only -- .
             false
           fi
-        env:
-          DEVELOPER_DIR: "/Applications/Xcode-latest.app/Contents/Developer"
+        # Note: DEVELOPER_DIR removed for GitHub-hosted runners compatibility
 
       - name: Set build configuration
         run: |
@@ -60,8 +59,7 @@ jobs:
         run: |
           make container dsym docs
           tar cfz _site.tgz _site
-        env:
-          DEVELOPER_DIR: "/Applications/Xcode-latest.app/Contents/Developer"
+        # Note: DEVELOPER_DIR removed for GitHub-hosted runners compatibility
 
       - name: Create package
         run: |
@@ -79,8 +77,7 @@ jobs:
           export no_proxy="${no_proxy},192.168.0.0/16,fe80::/10"
           echo no_proxy=${no_proxy}
           make APP_ROOT="${APP_ROOT}" test install-kernel integration
-        env:
-          DEVELOPER_DIR: "/Applications/Xcode-latest.app/Contents/Developer"
+        # Note: DEVELOPER_DIR removed for GitHub-hosted runners compatibility
 
       - name: Save documentation artifact
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6
