--- a/.github/workflows/test-openssl-curl.yml
+++ b/.github/workflows/test-openssl-curl.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   test-curl:
     name: Test HTTPS in x86_64 container
-    runs-on: macos-latest  # Changed from self-hosted to GitHub-hosted runner for fork testing
+    runs-on: macos-16  # macOS 16+ required for container CLI (needs Xcode 26)
     timeout-minutes: 30
     
     steps:
