--- a/.github/workflows/test-openssl-curl.yml
+++ b/.github/workflows/test-openssl-curl.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   test-curl:
     name: Test HTTPS in x86_64 container
-    runs-on: macos-16  # macOS 16+ required for container CLI (needs Xcode 26)
+    runs-on: macos-15  # Latest available GitHub-hosted macOS runner
     timeout-minutes: 30
     
     steps:
