--- a/.github/workflows/test-openssl-curl.yml
+++ b/.github/workflows/test-openssl-curl.yml
@@ -15,7 +15,7 @@ jobs:
     name: Test HTTPS in x86_64 container
     # This requires Apple's self-hosted macOS Tahoe runners with container CLI pre-installed
     # GitHub-hosted runners can't build this (requires Swift 6.2) or install via brew (requires Xcode 26)
-    if: github.repository == 'apple/container'
+    if: github.repository == 'Ronitsabhaya75/container'
     runs-on: [self-hosted, macos, tahoe, ARM64]
     timeout-minutes: 30
     
